test/Fail/DuplicateExecutable.vars
AGDA_DIR=$PWD/test/aux/DuplicateExecutable
